--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,41 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 
 .header {
-    background-image: url("https://newevolutiondesigns.com/images/freebies/city-wallpaper-11.jpg");
+    background-image: url("https://images.unsplash.com/26/city-scape.jpg?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb");
     background-attachment: fixed;
-    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    height: 550px;;
+    background-size: 100% 100%;
+    height: 550px;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo img {
-    width: 150px;
+    margin-left: 3em;
+    width: 100px;
+    height:100px;
 }
 
-.nav-bar {
-    overflow: hidden;
-    height: 80px;
-    display: inline-block;
+.logo {
+    outline-offset: 2px;
 }
 
-.nav-bar a {
-    padding: 14px 150px;
+.nav-sections {
+    overflow: hidden; 
+    height: 80px; 
+    display: flex;
+}
+
+.nav-sections a {
+    display: block;
+    margin: .6rem 0;
+	padding: .6rem 1.25rem;
     text-decoration: none;
-    font-size: 40px;
+    font-size: 30px;
     font-family: 'Abril Fatface';
     font-weight: bold;
-    color: black;
+    color: white;
 }
 
-.nav-bar a:hover {
+.header a:hover {
     color: #00afb9;
-}
-
-.slogan {
-    font-size: 15px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 100;
-    color: #646362;
+    border: 1px solid #00afb9;
 }
