--- a/src/Skills/skills.css
+++ b/src/Skills/skills.css
@@ -1,12 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Benne&display=swap');
+
 .skills-section {
   background: white;
-  width: 50%;
+  width: 80%;
   padding: 25px 30px;
   border-radius: 10px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   text-align: left;
 }
-
+.skills-title {
+  background-image: url(./brushStroke.png);
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-size: 50px;
+  height: 180px;
+  width: 700px;
+  padding: 80px;
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: 'Benne', serif;
+}
 .progress-bar {
   overflow: visible;
 }
